--- a/python_datasc/delete_row.ipynb
+++ b/python_datasc/delete_row.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "bbe8b59e",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "f73010e1",
    "metadata": {},
    "outputs": [],
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "f6281479",
    "metadata": {},
    "outputs": [
@@ -1098,19 +1098,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "4cc27163",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.neighbors import LocalOutlierFactor\n",
     "lof = LocalOutlierFactor()\n",
-    "yhat = lof.fit_predict(dt3[[0]])"
+    "xhat = lof.fit_predict(dt3[[0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "5ee3e50c",
    "metadata": {},
    "outputs": [
@@ -1122,18 +1122,18 @@
        "        1,  1, -1, -1, -1, -1])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "yhat\n"
+    "xhat\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "052d3025",
    "metadata": {},
    "outputs": [
@@ -1147,11 +1147,11 @@
     }
    ],
    "source": [
-    "X_sel= dt3[[0]][yhat == 1]\n",
+    "X_sel= dt3[[0]][xhat == 1]\n",
     "print(X_sel.shape)\n",
-    "y_sel = dt3[[1]][yhat == 1]\n",
+    "y_sel = dt3[[1]][xhat == 1]\n",
     "print(y_sel.shape)\n",
-    "y_sel = dt3[[1]][yhat == 1]\n",
+    "y_sel = dt3[[1]][xhat == 1]\n",
     "dt4 = pd.concat([X_sel, y_sel],axis= 1 )\n",
     "dt4.sort_values([0], inplace = True)"
    ]
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9050533f",
+   "id": "bed88ff2",
    "metadata": {},
    "outputs": [
     {
