Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -202,7 +202,9 @@
     "\n",
     "https://notes.ekzhang.com/papers/passwords\n",
     "\n",
-    "https://github.com/gitpod-io/openvscode-server   vscode server"
+    "https://github.com/gitpod-io/openvscode-server   vscode server\n",
+    "https://sli.dev/guide/syntax.html#multiple-entries\n",
+    "https://mermaid.js.org/syntax/examples.html"
    ]
   },
   {
