--- a/python_datasc/make_regression.ipynb
+++ b/python_datasc/make_regression.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "027075ca",
+   "id": "d2ffcc31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1bdd9a2e",
+   "id": "f12cadb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "1186adcc",
+   "id": "c5f04989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "b2d0c29f",
+   "id": "71a369cf",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "436d3baa",
+   "id": "be6e3bdc",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "55121d3c",
+   "id": "98edf769",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "a6e95f3e",
+   "id": "dfdacf1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "34184454",
+   "id": "73baa98b",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "a8215fe0",
+   "id": "677c0b51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "f7239ccf",
+   "id": "d4aabf2f",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "a385d0d8",
+   "id": "0cfc22f2",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "a7361521",
+   "id": "1879dd55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "a1d0f784",
+   "id": "ac87f97c",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "7351719f",
+   "id": "092aaa10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,8 +419,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "4dad4b42",
+   "execution_count": 119,
+   "id": "d48e7c25",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "d0f990c1",
+   "id": "a2cc36c3",
    "metadata": {},
    "outputs": [
     {
@@ -464,8 +464,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "b850b046",
+   "execution_count": 152,
+   "id": "5436cab5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gx = dt.x.to_numpy()\n",
+    "gx = gx.reshape(-1,1)\n",
+    "gy = dt.y.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "b2584836",
    "metadata": {
     "scrolled": true
    },
@@ -474,20 +486,116 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8667428143875417\n"
+      "0.8667428143875417\n",
+      "[0.86051194]\n"
      ]
     }
    ],
    "source": [
     "regr = linear_model.LinearRegression()\n",
     "regr.fit(nx, ny)\n",
-    "print(regr.score(nx, ny))"
+    "print(regr.score(nx, ny))\n",
+    "print(regr.coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "c642bee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " from sklearn.linear_model import SGDRegressor\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "7d57c3a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gx = dt.x.to_numpy()\n",
+    "gx = gx.reshape(-1,1)\n",
+    "gy = dt.y.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "b9ef02e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " regr2 = SGDRegressor( max_iter=1000, penalty=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "b154d80c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8667427113043573\n"
+     ]
+    }
+   ],
+   "source": [
+    "regr2.fit(gx, gy)\n",
+    "print(regr2.score(gx, gy))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "2fddbf9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[57.45703031] [0.66740755]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(regr2.coef_, regr2.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "4d55bf52",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8667428143875416\n",
+      "[57.43727105]\n"
+     ]
+    }
+   ],
+   "source": [
+    "regr = linear_model.LinearRegression()\n",
+    "regr.fit(gx, gy)\n",
+    "print(regr.score(gx, gy))\n",
+    "print(regr.coef_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "909ec54b",
+   "id": "d50b985a",
    "metadata": {},
    "outputs": [],
    "source": []
