--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -203,8 +203,12 @@
     "https://notes.ekzhang.com/papers/passwords\n",
     "\n",
     "https://github.com/gitpod-io/openvscode-server   vscode server\n",
+    "\n",
     "https://sli.dev/guide/syntax.html#multiple-entries\n",
-    "https://mermaid.js.org/syntax/examples.html"
+    "\n",
+    "https://mermaid.js.org/syntax/examples.html\n",
+    "\n",
+    "https://deepu.tech/memory-management-in-golang/  gestion memoire en go"
    ]
   },
   {
