--- a/blog/python&golang1.ipynb
+++ b/blog/python&golang1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d78a2d11",
+   "id": "2a3acd7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,12 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cfe0cd86",
+   "id": "e8ea7c6b",
    "metadata": {},
    "outputs": [],
    "source": [
     "class De:\n",
+    "    ''' classe qui émule un dé'''\n",
     "    def __init__(self, nbface):\n",
     "        self.nbface  = nbface \n",
     "        \n",
@@ -31,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1fa06c77",
+   "id": "51cfec7e",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7a6640de",
+   "id": "8184a294",
    "metadata": {
     "collapsed": true
    },
@@ -172,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "891475bc",
+   "id": "bbd2ba6b",
    "metadata": {},
    "outputs": [],
    "source": []
