--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -220,12 +220,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3390a1a",
+   "cell_type": "markdown",
+   "id": "b3ddda56",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://builtin.com/data-science/l2-regularization\n",
+    "https://www.youtube.com/@statquest    video IA\n",
+    "https://www.manning.com/books/100-go-mistakes-and-how-to-avoid-them"
+   ]
   }
  ],
  "metadata": {
