--- a/blog/python&golang1.ipynb
+++ b/blog/python&golang1.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2a3acd7a",
+   "execution_count": 2,
+   "id": "292833ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e8ea7c6b",
+   "execution_count": 3,
+   "id": "2854169b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,8 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "51cfec7e",
+   "execution_count": 4,
+   "id": "26cbab41",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
      "output_type": "stream",
      "text": [
       "nb de face: 6\n",
-      "face: 5\n"
+      "face: 6\n"
      ]
     }
    ],
@@ -52,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "8184a294",
+   "execution_count": 5,
+   "id": "1bb3ad55",
    "metadata": {
     "collapsed": true
    },
@@ -62,105 +62,105 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
-      "4\n",
       "2\n",
       "1\n",
+      "4\n",
       "5\n",
       "3\n",
       "1\n",
-      "6\n",
-      "2\n",
-      "5\n",
       "3\n",
       "4\n",
-      "4\n",
-      "6\n",
-      "5\n",
-      "1\n",
-      "2\n",
-      "6\n",
-      "5\n",
-      "2\n",
-      "4\n",
-      "1\n",
-      "1\n",
-      "6\n",
-      "2\n",
-      "6\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "5\n",
-      "6\n",
       "5\n",
       "3\n",
-      "5\n",
-      "5\n",
-      "3\n",
-      "3\n",
-      "4\n",
+      "1\n",
       "2\n",
+      "2\n",
+      "2\n",
+      "5\n",
+      "2\n",
+      "3\n",
+      "1\n",
       "6\n",
-      "5\n",
+      "3\n",
       "2\n",
-      "2\n",
-      "2\n",
-      "4\n",
+      "1\n",
       "1\n",
       "4\n",
-      "2\n",
       "4\n",
-      "1\n",
-      "6\n",
-      "6\n",
-      "3\n",
-      "6\n",
-      "3\n",
-      "5\n",
-      "1\n",
-      "5\n",
-      "1\n",
-      "3\n",
-      "6\n",
-      "2\n",
-      "2\n",
-      "3\n",
-      "6\n",
-      "1\n",
       "5\n",
       "2\n",
       "6\n",
       "1\n",
-      "6\n",
-      "2\n",
-      "3\n",
-      "4\n",
       "3\n",
       "1\n",
-      "6\n",
-      "2\n",
+      "4\n",
       "3\n",
       "4\n",
       "2\n",
+      "4\n",
+      "1\n",
       "3\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "4\n",
+      "2\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "5\n",
+      "1\n",
+      "5\n",
+      "5\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "3\n",
+      "4\n",
+      "3\n",
+      "6\n",
+      "5\n",
+      "6\n",
+      "3\n",
+      "5\n",
+      "2\n",
+      "6\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "4\n",
+      "2\n",
+      "5\n",
+      "3\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "4\n",
+      "1\n",
+      "3\n",
+      "6\n",
+      "1\n",
       "3\n",
       "1\n",
       "3\n",
       "5\n",
-      "5\n",
+      "6\n",
+      "4\n",
+      "6\n",
+      "4\n",
+      "6\n",
       "3\n",
+      "4\n",
+      "6\n",
       "5\n",
       "6\n",
       "6\n",
       "1\n",
-      "3\n",
-      "4\n",
-      "2\n",
       "5\n",
-      "6\n",
       "3\n",
-      "4\n",
+      "2\n",
+      "3\n",
+      "2\n",
       "2\n"
      ]
     }
@@ -172,8 +172,98 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "7626847c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Depipe(De):\n",
+    "    def __init__(self, nbface, faceplus):\n",
+    "        self.faceplus = faceplus\n",
+    "        super().__init__(nbface)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "95cdbe08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'faceplus': 2, 'nbface': 6}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d2 = Depipe(6,2)\n",
+    "vars(d2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "24561784",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ajoute(b):\n",
+    "    b = \n",
+    "    return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6b0f2b76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3]\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a =[1, 2,3]\n",
+    "print(ajoute(a))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2cd64309",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 1, 2, 3)\n",
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a =(1, 2,3)\n",
+    "print(ajoute(a))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bbd2ba6b",
+   "id": "0dce3210",
    "metadata": {},
    "outputs": [],
    "source": []
