--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -83,6 +83,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "411a0dc6",
+   "metadata": {},
+   "source": [
+    "#### linear regression  vs lasso vs ridge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "457c7871",
    "metadata": {},
    "source": [
@@ -221,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ddda56",
+   "id": "e702c5bf",
    "metadata": {},
    "source": [
     "https://builtin.com/data-science/l2-regularization\n",
