--- a/blog/python&golang1.ipynb
+++ b/blog/python&golang1.ipynb
@@ -208,62 +208,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "24561784",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ajoute(b):\n",
-    "    b = \n",
+    "def ajoute(b,c ):\n",
+    "    b += c\n",
     "    return b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "6b0f2b76",
+   "execution_count": 15,
+   "id": "e8f6d164",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 1, 2, 3]\n",
-      "[1, 2, 3]\n"
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3, 4]\n"
      ]
     }
    ],
    "source": [
     "a =[1, 2,3]\n",
-    "print(ajoute(a))\n",
+    "print(ajoute(a, [4]))\n",
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "2cd64309",
+   "execution_count": 17,
+   "id": "45d8ac19",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 2, 3, 1, 2, 3)\n",
+      "(1, 2, 3, 4)\n",
       "(1, 2, 3)\n"
      ]
     }
    ],
    "source": [
     "a =(1, 2,3)\n",
-    "print(ajoute(a))\n",
+    "print(ajoute(a,(4,)))\n",
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dce3210",
+   "id": "02d5a3da",
    "metadata": {},
    "outputs": [],
    "source": []
