Update feuille de route blog.ipynb
url

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -233,9 +233,22 @@
    "metadata": {},
    "source": [
     "https://builtin.com/data-science/l2-regularization\n",
+    "\n",
     "https://www.youtube.com/@statquest    video IA\n",
-    "https://www.manning.com/books/100-go-mistakes-and-how-to-avoid-them"
+    "\n",
+    "https://www.manning.com/books/100-go-mistakes-and-how-to-avoid-them\n",
+    "\n",
+    "https://rednafi.com/go/totp_client/  topt\n",
+    "https://www.sjoerdlangkemper.nl/2023/08/16/session-timeout/ short timeout\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "492b86c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
