--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -238,14 +238,17 @@
     "\n",
     "https://www.manning.com/books/100-go-mistakes-and-how-to-avoid-them\n",
     "\n",
-    "https://rednafi.com/go/totp_client/  topt\n",
-    "https://www.sjoerdlangkemper.nl/2023/08/16/session-timeout/ short timeout\n"
+    "https://rednafi.com/go/totp_client/  topt \n",
+    "\n",
+    "https://www.sjoerdlangkemper.nl/2023/08/16/session-timeout/ short timeout\n",
+    "\n",
+    "https://book.kubebuilder.io/introduction  dev kubernetes\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "492b86c9",
+   "id": "98500fbf",
    "metadata": {},
    "outputs": [],
    "source": []
