Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -242,7 +242,9 @@
     "\n",
     "https://www.sjoerdlangkemper.nl/2023/08/16/session-timeout/ short timeout\n",
     "\n",
-    "https://book.kubebuilder.io/introduction  dev kubernetes\n"
+    "https://book.kubebuilder.io/introduction  dev kubernetes\n",
+    "https://lets-go.alexedwards.net/#packages   livre go/html\n",
+    "https://www.packtpub.com/product/go-for-devops/9781801818896   livre\n"
    ]
   },
   {
