Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -86,7 +86,7 @@
    "id": "411a0dc6",
    "metadata": {},
    "source": [
-    "#### linear regression  vs lasso vs ridge"
+    "#### linear regression  vs lasso vs ridge  FAIT publié en septembre 23"
    ]
   },
   {
@@ -95,6 +95,14 @@
    "metadata": {},
    "source": [
     "visualiser le bytecode https://github.com/tonybaloney/instaviz\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79f3605e",
+   "metadata": {},
+   "source": [
+    "la régression polynomiale python  (make_moon)"
    ]
   },
   {
@@ -244,7 +252,8 @@
     "\n",
     "https://book.kubebuilder.io/introduction  dev kubernetes\n",
     "https://lets-go.alexedwards.net/#packages   livre go/html\n",
-    "https://www.packtpub.com/product/go-for-devops/9781801818896   livre\n"
+    "https://www.packtpub.com/product/go-for-devops/9781801818896   livre\n",
+    "https://www.youtube.com/watch?v=ae72pKpXe-s   tuto vault\n"
    ]
   },
   {
