--- a/blog/python&golang1.ipynb
+++ b/blog/python&golang1.ipynb
@@ -326,8 +326,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "b4145abc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "b92ed4c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 1, 2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a= [4, 2, 'a', 1] # elements hétérogènes => fonction key\n",
+    "b = sorted(a,key=lambda x:  '|' + str(x)  if  type(x) == int else x)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "760689bf",
    "metadata": {},
    "outputs": [],
    "source": []
