--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -253,7 +253,8 @@
     "https://book.kubebuilder.io/introduction  dev kubernetes\n",
     "https://lets-go.alexedwards.net/#packages   livre go/html\n",
     "https://www.packtpub.com/product/go-for-devops/9781801818896   livre\n",
-    "https://www.youtube.com/watch?v=ae72pKpXe-s   tuto vault\n"
+    "https://www.youtube.com/watch?v=ae72pKpXe-s   tuto vault\n",
+    "https://casbin.org/docs/get-started  ACL  for golang\n"
    ]
   },
   {
