--- a/blog/python&golang1.ipynb
+++ b/blog/python&golang1.ipynb
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b4145abc",
+   "id": "8fbc2300",
    "metadata": {},
    "outputs": [
     {
@@ -367,8 +367,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "id": "f3dec2fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MonObjet:\n",
+    "\n",
+    "    def __lt__(self, autre):\n",
+    "        if id(self) < id(autre) :\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    def __str__(self):\n",
+    "        return(f\"id {id(self)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "e2c12e14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "avant le tri\n",
+      "id 2391987783712\n",
+      "id 2391987783328\n",
+      "apres le tri\n",
+      "id 2391987783328\n",
+      "id 2391987783712\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = MonObjet()\n",
+    "b = MonObjet()\n",
+    "print(id(a) < id(b))\n",
+    "\n",
+    "c = [a,b]\n",
+    "print(\"avant le tri\")\n",
+    "for obj in c:\n",
+    "    print(obj)    \n",
+    "d  = sorted(c)\n",
+    "print(\"apres le tri\")\n",
+    "for obj in d:\n",
+    "    print(obj)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "760689bf",
+   "id": "684cec12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70da5c53",
    "metadata": {},
    "outputs": [],
    "source": []
