Update feuille de route blog.ipynb

--- a/blog/feuille de route blog.ipynb
+++ b/blog/feuille de route blog.ipynb
@@ -251,10 +251,14 @@
     "https://www.sjoerdlangkemper.nl/2023/08/16/session-timeout/ short timeout\n",
     "\n",
     "https://book.kubebuilder.io/introduction  dev kubernetes\n",
+    "\n",
     "https://lets-go.alexedwards.net/#packages   livre go/html\n",
+    "\n",
     "https://www.packtpub.com/product/go-for-devops/9781801818896   livre\n",
     "https://www.youtube.com/watch?v=ae72pKpXe-s   tuto vault\n",
-    "https://casbin.org/docs/get-started  ACL  for golang\n"
+    "https://casbin.org/docs/get-started  ACL  for golang\n",
+    "\n",
+    "https://renegadeotter.com/2023/09/10/death-by-a-thousand-microservices.html  microservice\n"
    ]
   },
   {
