--- a/blog/python&golang1.ipynb
+++ b/blog/python&golang1.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "02d5a3da",
    "metadata": {},
    "outputs": [
@@ -270,13 +270,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 4, 7]\n"
+      "[7, 4, 2, 1]\n"
      ]
     }
    ],
    "source": [
     "a= [4, 2, 7, 1] # elements homogènes \n",
-    "b = sorted(a)\n",
+    "b = sorted(a, reverse = True)\n",
     "print(b)"
    ]
   },
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8fbc2300",
+   "id": "45499202",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "f3dec2fa",
+   "id": "b78651fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e2c12e14",
+   "id": "454f3208",
    "metadata": {},
    "outputs": [
     {
@@ -420,16 +420,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "684cec12",
+   "execution_count": 5,
+   "id": "7c7fd464",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = [(3, 5), (6, 1), (2,6)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9a2b3afe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2, 6), (3, 5), (6, 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sorted(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "38c946cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f305c719",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(6, 1), (3, 5), (2, 6)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sorted(a, key= operator.itemgetter(1) ))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70da5c53",
+   "id": "b549cd9a",
    "metadata": {},
    "outputs": [],
    "source": []
