--- a/blog/python&golang1.ipynb
+++ b/blog/python&golang1.ipynb
@@ -476,18 +476,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "b549cd9a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "matranche= slice(1,3)"
+    "matranche= slice(1,4)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1f74827d",
+   "id": "713e0c36",
    "metadata": {},
    "outputs": [
     {
@@ -533,29 +533,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "9c4f7d6c",
+   "execution_count": 15,
+   "id": "62fbd02b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0, 0, 1)"
+       "(1, 4, 1)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "matranche.indices(0)"
+    "matranche.indices(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c5aa24e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 1)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matranche.indices(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7c0efb0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matranche.stop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "03299f33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'toi'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"etoile des neiges\"[matranche]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "37951590",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 6, 'r']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "['e',4, 6,'r'][matranche]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fe08991",
+   "id": "444939b5",
    "metadata": {},
    "outputs": [],
    "source": []
